update_porfoilio_work

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Tue Oct 29 2024 14:25:09 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="641b5e72069a0f4b3fff4113" data-wf-site="641b5e72069a0f21c5ff410f">
 <head>
   <meta charset="utf-8">
-  <title>Ayo Akinnawo's Portfolio</title>
+  <title>Portfolio - Webflow HTML website template</title>
   <meta content="Portfolio - Webflow HTML website template" property="og:title">
   <meta content="https://uploads-ssl.webflow.com/5c6e6f46bf98b2013cf621c5/5cdbf62c56d6dd3315e2b16b_Portfolio%20SEO.jpg" property="og:image">
   <meta content="Portfolio - Webflow HTML website template" property="twitter:title">
@@ -271,7 +271,7 @@
             </div>
             <div class="uui-button-row-11">
               <div class="uui-button-wrapper-8">
-                <a href="http://18.219.20.212" target="_blank" class="uui-button-secondary-gray-21 is-button-small w-inline-block">
+                <a href="http://chat.techcruncher.org" target="_blank" class="uui-button-secondary-gray-21 is-button-small w-inline-block">
                   <div class="text-block-58">Generative AI Chatbot</div>
                 </a>
               </div>
@@ -540,7 +540,7 @@
                 <div class="uui-blogsection12_slide w-slide">
                   <div class="uui-blogsection12_item">
                     <a data-w-id="39be6bd7-2ad5-9051-fa41-232a7e1a0637" href="work/software-engineering.html" class="uui-blogsection12_image-link w-inline-block">
-                      <div class="uui-blogsection12_image-wrapper"><img srcset="images/2f378f9fb089a07929f3ccbc9e458f39-p-500.jpg 500w, images/2f378f9fb089a07929f3ccbc9e458f39.jpg 564w" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 70vw, (max-width: 991px) 44vw, (max-width: 1439px) 29vw, 394.609375px" src="images/2f378f9fb089a07929f3ccbc9e458f39.jpg" alt="" class="uui-blogsection12_image"></div>
+                      <div class="uui-blogsection12_image-wrapper"><img srcset="images/2f378f9fb089a07929f3ccbc9e458f39-p-500.jpg 500w, images/2f378f9fb089a07929f3ccbc9e458f39.jpg 564w" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 70vw, (max-width: 991px) 44vw, (max-width: 1439px) 29vw, 394.6171875px" src="images/2f378f9fb089a07929f3ccbc9e458f39.jpg" alt="" class="uui-blogsection12_image"></div>
                     </a>
                     <a data-w-id="39be6bd7-2ad5-9051-fa41-232a7e1a063d" href="work/software-engineering.html" class="uui-blogsection12_title-link-copy w-inline-block">
                       <h3 class="uui-heading-xsmall-12-copy">Software Engineering</h3>
@@ -553,7 +553,7 @@
                 <div class="uui-blogsection12_slide w-slide">
                   <div class="uui-blogsection12_item">
                     <a data-w-id="10fa1d7b-7526-1d5e-bcac-9aa3955cd64b" href="work/development-operations.html" class="uui-blogsection12_image-link w-inline-block">
-                      <div class="uui-blogsection12_image-wrapper"><img srcset="images/c32bde4da88b61811975e67fbaa2bc31-p-500.jpg 500w, images/c32bde4da88b61811975e67fbaa2bc31.jpg 564w" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 70vw, (max-width: 991px) 44vw, (max-width: 1439px) 29vw, 394.609375px" src="images/c32bde4da88b61811975e67fbaa2bc31.jpg" alt="" class="uui-blogsection12_image"></div>
+                      <div class="uui-blogsection12_image-wrapper"><img srcset="images/c32bde4da88b61811975e67fbaa2bc31-p-500.jpg 500w, images/c32bde4da88b61811975e67fbaa2bc31.jpg 564w" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 70vw, (max-width: 991px) 44vw, (max-width: 1439px) 29vw, 394.6171875px" src="images/c32bde4da88b61811975e67fbaa2bc31.jpg" alt="" class="uui-blogsection12_image"></div>
                     </a>
                     <a data-w-id="7ff0dd77-b44b-56b3-eba3-4829d3bf908c" href="work/development-operations.html" class="uui-blogsection12_title-link-copy w-inline-block">
                       <h3 class="uui-heading-xsmall-12-copy">Developmment Operations</h3>
@@ -566,7 +566,7 @@
                 <div class="uui-blogsection12_slide w-slide">
                   <div class="uui-blogsection12_item">
                     <a data-w-id="388a6fef-e8c8-c66e-eb35-064765cd7f25" href="work/scripting.html" class="uui-blogsection12_image-link w-inline-block">
-                      <div class="uui-blogsection12_image-wrapper"><img srcset="images/download-p-500.jpeg 500w, images/download.jpeg 1000w" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 70vw, (max-width: 991px) 44vw, (max-width: 1439px) 29vw, 394.609375px" src="images/download.jpeg" alt="" class="uui-blogsection12_image"></div>
+                      <div class="uui-blogsection12_image-wrapper"><img srcset="images/download-p-500.jpeg 500w, images/download.jpeg 1000w" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 70vw, (max-width: 991px) 44vw, (max-width: 1439px) 29vw, 394.6171875px" src="images/download.jpeg" alt="" class="uui-blogsection12_image"></div>
                     </a>
                     <a data-w-id="e33f4dd5-18e5-bba3-b938-793283def615" href="work/scripting.html" class="uui-blogsection12_title-link-copy w-inline-block">
                       <h3 class="uui-heading-xsmall-12-copy">Scripting</h3>
@@ -579,7 +579,7 @@
                 <div class="uui-blogsection12_slide w-slide">
                   <div class="uui-blogsection12_item">
                     <a data-w-id="ea96b599-a98a-9a51-528f-5bf8d18f8437" href="work/data-science-engineering.html" class="uui-blogsection12_image-link w-inline-block">
-                      <div class="uui-blogsection12_image-wrapper"><img srcset="images/9ba9a300779691124492c19d93e01933-p-500.jpg 500w, images/9ba9a300779691124492c19d93e01933.jpg 564w" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 70vw, (max-width: 991px) 44vw, (max-width: 1439px) 29vw, 394.609375px" src="images/9ba9a300779691124492c19d93e01933.jpg" alt="" class="uui-blogsection12_image"></div>
+                      <div class="uui-blogsection12_image-wrapper"><img srcset="images/9ba9a300779691124492c19d93e01933-p-500.jpg 500w, images/9ba9a300779691124492c19d93e01933.jpg 564w" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 70vw, (max-width: 991px) 44vw, (max-width: 1439px) 29vw, 394.6171875px" src="images/9ba9a300779691124492c19d93e01933.jpg" alt="" class="uui-blogsection12_image"></div>
                     </a>
                     <a data-w-id="c0f63314-3364-561b-f6ca-281a9269e13f" href="work/data-science-engineering.html" class="uui-blogsection12_title-link-copy w-inline-block">
                       <h3 class="uui-heading-xsmall-12-copy">Data Engineering and Science</h3>
