--- a/resume.html
+++ b/resume.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Tue Oct 29 2024 14:25:09 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="641b5e72069a0f4f98ff4116" data-wf-site="641b5e72069a0f21c5ff410f">
 <head>
   <meta charset="utf-8">
@@ -18,7 +18,7 @@
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
 </head>
-<body class="body">
+<body class="body-6">
   <div data-collapse="medium" data-animation="default" data-duration="400" fs-scrolldisable-element="smart-nav" data-easing="ease" data-easing2="ease" role="banner" class="nav_bar w-nav">
     <div class="rl_navbar1_container">
       <div>
@@ -664,7 +664,7 @@
                 </div>
                 <div class="uui-layout32_timeline-right">
                   <div class="uui-layout32_text-wrapper">
-                    <h3 class="uui-heading-xxsmall-7">Full Stack Development - Django and AWS</h3>
+                    <h3 class="uui-heading-xxsmall-7">Full Stack Development - Django , AWS &amp; GCP</h3>
                     <div class="uui-space-xxsmall-6"></div>
                     <div class="uui-text-size-medium-10">Developed a Data Content application for a non-profit organization using the Django framework.<br><br>Implemented features for managing and presenting data to support the organization&#x27;s mission.<br><br>Deployed the application to ensure accessibility and reliability for users.<br><br>Continuously maintain and update the application to meet evolving needs and address any issues.<br><br>Collaborate with stakeholders to enhance the application&#x27;s functionality and user experience</div>
                   </div>
@@ -697,7 +697,7 @@
           <div class="uui-layout32_content-left">
             <div class="uui-heading-subheading-12">Master of Science, <span class="text-span-5">Computer Info. Science</span> with <span class="text-span-6">Cybersecurity<br><em>May 2019 – Apr 2022<br></em><strong><em class="italic-text-2">Harrisburg, PA (USA)</em></strong> </span></div>
             <div class="div-block-9">
-              <div><img src="images/24135971-a880-474b-8c22-56223c5a1819.png" loading="lazy" width="300" alt="SchlIcon" class="image-6"></div><img src="images/IMG_2658.jpeg" width="400" alt="GradImg" style="opacity:0" sizes="(max-width: 479px) 100vw, (max-width: 767px) 400px, (max-width: 991px) 272.5625px, 365.140625px" data-w-id="fd73695d-35f3-660c-bcb7-d7ce24e057f0" loading="lazy" srcset="images/IMG_2658-p-500.jpeg 500w, images/IMG_2658-p-800.jpeg 800w, images/IMG_2658-p-1080.jpeg 1080w, images/IMG_2658-p-1600.jpeg 1600w, images/IMG_2658-p-2000.jpeg 2000w, images/IMG_2658-p-2600.jpeg 2600w, images/IMG_2658-p-3200.jpeg 3200w, images/IMG_2658.jpeg 4096w">
+              <div><img src="images/24135971-a880-474b-8c22-56223c5a1819.png" loading="lazy" width="300" alt="SchlIcon" class="image-6"></div><img src="images/IMG_2658.jpeg" width="400" alt="GradImg" style="opacity:0" sizes="(max-width: 479px) 100vw, (max-width: 767px) 400px, (max-width: 991px) 272.5703125px, 365.140625px" data-w-id="fd73695d-35f3-660c-bcb7-d7ce24e057f0" loading="lazy" srcset="images/IMG_2658-p-500.jpeg 500w, images/IMG_2658-p-800.jpeg 800w, images/IMG_2658-p-1080.jpeg 1080w, images/IMG_2658-p-1600.jpeg 1600w, images/IMG_2658-p-2000.jpeg 2000w, images/IMG_2658-p-2600.jpeg 2600w, images/IMG_2658-p-3200.jpeg 3200w, images/IMG_2658.jpeg 4096w">
             </div>
             <div class="uui-space-medium-7"></div>
           </div>
@@ -963,7 +963,7 @@
           <div class="uui-layout32_content-left">
             <div class="uui-heading-subheading-12">Bachelor of Science, <span class="text-span-5">Physics</span> <span class="text-span-6"></span></div>
             <div class="div-block-9">
-              <div class="div-block-14"><img src="images/university-of-lagos-logo-38976CB5C4-seeklogo.com.png" loading="lazy" width="250" alt="SchlIcon" class="image-5"><img src="images/C360_2016-03-03-14-31-29-051.jpg" width="300" alt="GradImg" style="opacity:0" sizes="(max-width: 479px) 100vw, (max-width: 767px) 300px, (max-width: 991px) 272.5625px, 300px" data-w-id="22693fc4-35d5-feb4-4435-0e6dd846a2ff" loading="lazy" srcset="images/C360_2016-03-03-14-31-29-051-p-500.jpg 500w, images/C360_2016-03-03-14-31-29-051-p-800.jpg 800w, images/C360_2016-03-03-14-31-29-051-p-1080.jpg 1080w, images/C360_2016-03-03-14-31-29-051.jpg 1414w"></div>
+              <div class="div-block-14"><img src="images/university-of-lagos-logo-38976CB5C4-seeklogo.com.png" loading="lazy" width="250" alt="SchlIcon" class="image-5"><img src="images/C360_2016-03-03-14-31-29-051.jpg" width="300" alt="GradImg" style="opacity:0" sizes="(max-width: 479px) 100vw, (max-width: 767px) 300px, (max-width: 991px) 272.5703125px, 300px" data-w-id="22693fc4-35d5-feb4-4435-0e6dd846a2ff" loading="lazy" srcset="images/C360_2016-03-03-14-31-29-051-p-500.jpg 500w, images/C360_2016-03-03-14-31-29-051-p-800.jpg 800w, images/C360_2016-03-03-14-31-29-051-p-1080.jpg 1080w, images/C360_2016-03-03-14-31-29-051.jpg 1414w"></div>
             </div>
             <div class="uui-space-medium-7"></div>
           </div>
