--- a/work/software-engineering.html
+++ b/work/software-engineering.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  --><!--  Last Published: Thu May 16 2024 16:22:33 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Tue Oct 29 2024 14:25:09 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="65e14ad4f7f059d1a85fa108" data-wf-site="641b5e72069a0f21c5ff410f">
 <head>
   <meta charset="utf-8">
@@ -259,10 +259,52 @@
             </div>
             <div class="w-layout-grid uui-team10_list-2">
               <div class="uui-team10_item-2">
-                <div class="uui-team10_image-wrapper-2"><img srcset="../images/Screenshot-2024-05-16-at-11.16.58-AM.png 500w, ../images/Screenshot-2024-05-16-at-11.16.58-AM.png 800w, ../images/Screenshot-2024-05-16-at-11.16.58-AM.png 1080w, ../images/Screenshot-2024-05-16-at-11.16.58-AM.png 1600w, ../images/Screenshot-2024-05-16-at-11.16.58-AM.png 1642w" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 991px) 59vw, (max-width: 1439px) 63vw, 853.34375px" src="../images/Screenshot-2024-05-16-at-11.16.58-AM.png" alt="" class="uui-team10_image-2"></div>
+                <div class="uui-team10_image-wrapper-2"><img srcset="../images/Screenshot-2024-10-29-at-9.18.22-AM.png 500w, ../images/Screenshot-2024-10-29-at-9.18.22-AM.png 800w, ../images/Screenshot-2024-10-29-at-9.18.22-AM.png 1080w, ../images/Screenshot-2024-10-29-at-9.18.22-AM.png 1600w, ../images/Screenshot-2024-10-29-at-9.18.22-AM.png 2000w, ../images/Screenshot-2024-10-29-at-9.18.22-AM.png 2600w, ../images/Screenshot-2024-10-29-at-9.18.22-AM.png 2776w" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 991px) 59vw, (max-width: 1439px) 63vw, 853.3359375px" src="../images/Screenshot-2024-10-29-at-9.18.22-AM.png" alt="" class="uui-team10_image-2"></div>
                 <div class="div-block-126">
                   <div class="uui-heading-tiny-9">
-                    <a data-w-id="75082d6e-de07-78b0-8dc0-49b6bf07a4f8" href="https://techcruncher.org" target="_blank" class="uui-blogsection12_title-link w-inline-block">
+                    <a data-w-id="75082d6e-de07-78b0-8dc0-49b6bf07a4f8" href="https://anythingindustrial.com" target="_blank" class="uui-blogsection12_title-link w-inline-block">
+                      <h3 class="uui-heading-xsmall-12">Anything Industrial</h3>
+                      <div class="uui-blogsection12_icon w-embed"><svg width="24" height="24" viewbox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                          <path d="M7 17L17 7M17 7H7M17 7V17" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+                        </svg></div>
+                    </a>
+                  </div>
+                  <div class="uui-text-size-medium-26 text-color-primary700">www.anythingindustrial.com</div>
+                </div>
+              </div>
+              <div id="w-node-_84e6e098-1695-3711-14ff-24beea23c43b-a85fa108" class="uui-team10_item-2">
+                <div class="uui-team10_image-wrapper-2"><img srcset="../images/Screenshot-2024-10-29-at-9.18.48-AM.png 500w, ../images/Screenshot-2024-10-29-at-9.18.48-AM.png 800w, ../images/Screenshot-2024-10-29-at-9.18.48-AM.png 1080w, ../images/Screenshot-2024-10-29-at-9.18.48-AM.png 1600w, ../images/Screenshot-2024-10-29-at-9.18.48-AM.png 2000w, ../images/Screenshot-2024-10-29-at-9.18.48-AM.png 2600w, ../images/Screenshot-2024-10-29-at-9.18.48-AM.png 2776w" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 991px) 59vw, (max-width: 1439px) 63vw, 853.3359375px" src="../images/Screenshot-2024-10-29-at-9.18.48-AM.png" alt="" class="uui-team10_image-2"></div>
+                <div class="div-block-126">
+                  <div class="uui-heading-tiny-9">
+                    <a href="https://voxmedicalsupply.com" target="_blank" class="uui-blogsection12_title-link w-inline-block">
+                      <h3 class="uui-heading-xsmall-12">VoxMedical Supply</h3>
+                      <div class="uui-blogsection12_icon w-embed"><svg width="24" height="24" viewbox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                          <path d="M7 17L17 7M17 7H7M17 7V17" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+                        </svg></div>
+                    </a>
+                  </div>
+                  <div class="uui-text-size-medium-26 text-color-primary700">www.voxmedicalsupply.com</div>
+                </div>
+              </div>
+              <div id="w-node-_8c49d91b-f885-e6d9-dce5-d1b220c8cd92-a85fa108" class="uui-team10_item-2">
+                <div class="uui-team10_image-wrapper-2"><img srcset="../images/Screenshot-2024-10-29-at-9.17.35-AM.png 500w, ../images/Screenshot-2024-10-29-at-9.17.35-AM.png 800w, ../images/Screenshot-2024-10-29-at-9.17.35-AM.png 1080w, ../images/Screenshot-2024-10-29-at-9.17.35-AM.png 1600w, ../images/Screenshot-2024-10-29-at-9.17.35-AM.png 2000w, ../images/Screenshot-2024-10-29-at-9.17.35-AM.png 2600w, ../images/Screenshot-2024-10-29-at-9.17.35-AM.png 2740w" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 991px) 59vw, (max-width: 1439px) 63vw, 853.3359375px" src="../images/Screenshot-2024-10-29-at-9.17.35-AM.png" alt="" class="uui-team10_image-2"></div>
+                <div class="div-block-126">
+                  <div class="uui-heading-tiny-9">
+                    <a href="https://voxtechnologies.com" target="_blank" class="uui-blogsection12_title-link w-inline-block">
+                      <h3 class="uui-heading-xsmall-12">Vox Technologies</h3>
+                      <div class="uui-blogsection12_icon w-embed"><svg width="24" height="24" viewbox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                          <path d="M7 17L17 7M17 7H7M17 7V17" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+                        </svg></div>
+                    </a>
+                  </div>
+                  <div class="uui-text-size-medium-26 text-color-primary700">www.voxtechnologies.com</div>
+                </div>
+              </div>
+              <div id="w-node-f79b1d6c-953a-c2f6-0422-edfb1094d142-a85fa108" class="uui-team10_item-2">
+                <div class="uui-team10_image-wrapper-2"><img srcset="../images/Screenshot-2024-05-16-at-11.16.58-AM-p-500.png 500w, ../images/Screenshot-2024-05-16-at-11.16.58-AM-p-800.png 800w, ../images/Screenshot-2024-05-16-at-11.16.58-AM-p-1080.png 1080w, ../images/Screenshot-2024-05-16-at-11.16.58-AM-p-1600.png 1600w, ../images/Screenshot-2024-05-16-at-11.16.58-AM.png 1642w" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 991px) 59vw, (max-width: 1439px) 63vw, 853.3359375px" src="../images/Screenshot-2024-05-16-at-11.16.58-AM.png" alt="" class="uui-team10_image-2"></div>
+                <div class="div-block-126">
+                  <div class="uui-heading-tiny-9">
+                    <a href="https://techcruncher.org" target="_blank" class="uui-blogsection12_title-link w-inline-block">
                       <h3 class="uui-heading-xsmall-12">TechCruncher</h3>
                       <div class="uui-blogsection12_icon w-embed"><svg width="24" height="24" viewbox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <path d="M7 17L17 7M17 7H7M17 7V17" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
@@ -288,10 +330,10 @@
                 </div>
               </div>
               <div class="uui-team10_item-2">
-                <div class="uui-team10_image-wrapper-2"><img srcset="../images/do-p-500.jpg 500w, ../images/do-p-800.jpg 800w, ../images/do.jpg 1080w" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 991px) 59vw, (max-width: 1439px) 63vw, 853.34375px" src="../images/do.jpg" alt="" class="uui-team10_image-2"></div>
+                <div class="uui-team10_image-wrapper-2"><img srcset="../images/Untitled-design-5-p-500.jpg 500w, ../images/Untitled-design-5-p-800.jpg 800w, ../images/Untitled-design-5.jpg 1080w" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 991px) 59vw, (max-width: 1439px) 63vw, 853.3359375px" src="../images/Untitled-design-5.jpg" alt="" class="uui-team10_image-2"></div>
                 <div class="div-block-126">
                   <div class="uui-heading-tiny-9">
-                    <a href="http://18.219.20.212" target="_blank" class="uui-blogsection12_title-link w-inline-block">
+                    <a href="http://chat.techcruncher.org" target="_blank" class="uui-blogsection12_title-link w-inline-block">
                       <h3 class="uui-heading-xsmall-12">OpenAI integration</h3>
                       <div class="uui-blogsection12_icon w-embed"><svg width="24" height="24" viewbox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <path d="M7 17L17 7M17 7H7M17 7V17" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
@@ -301,8 +343,23 @@
                   <div class="uui-text-size-medium-26 text-color-primary700">Generative-AI-ChatBOT </div>
                 </div>
               </div>
+              <div id="w-node-_75dcb477-1544-1a18-9b31-aff1106dbbc0-a85fa108" class="uui-team10_item-2">
+                <div class="uui-team10_image-wrapper-2"><img srcset="../images/Untitled-design-4-p-500.jpg 500w, ../images/Untitled-design-4-p-800.jpg 800w, ../images/Untitled-design-4.jpg 1080w" loading="lazy" sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 991px) 59vw, (max-width: 1439px) 63vw, 853.3359375px" src="../images/Untitled-design-4.jpg" alt="sc_proj
+" class="uui-team10_image-2"></div>
+                <div class="div-block-126">
+                  <div class="uui-heading-tiny-9">
+                    <a href="https://www.stockcheck.com" target="_blank" class="uui-blogsection12_title-link w-inline-block">
+                      <h3 class="uui-heading-xsmall-12">Enterprise Data Management App</h3>
+                      <div class="uui-blogsection12_icon w-embed"><svg width="24" height="24" viewbox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                          <path d="M7 17L17 7M17 7H7M17 7V17" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+                        </svg></div>
+                    </a>
+                  </div>
+                  <div class="uui-text-size-medium-26 text-color-primary700">stockcheck.com</div>
+                </div>
+              </div>
               <div class="uui-team10_item-2">
-                <div class="uui-team10_image-wrapper-2"><img height="100" loading="lazy" width="Auto" src="../images/fastAPI.jpeg" alt="" srcset="../images/fastAPI-p-500.jpeg 500w, ../images/fastAPI-p-800.jpeg 800w, ../images/fastAPI-p-1080.jpeg 1080w, ../images/fastAPI-p-1600.jpeg 1600w, ../images/fastAPI.jpeg 1920w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 991px) 59vw, (max-width: 1439px) 63vw, 853.34375px" class="uui-team10_image-2"></div>
+                <div class="uui-team10_image-wrapper-2"><img height="100" loading="lazy" width="Auto" src="../images/fastAPI.jpeg" alt="" srcset="../images/fastAPI-p-500.jpeg 500w, ../images/fastAPI-p-800.jpeg 800w, ../images/fastAPI-p-1080.jpeg 1080w, ../images/fastAPI-p-1600.jpeg 1600w, ../images/fastAPI.jpeg 1920w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 991px) 59vw, (max-width: 1439px) 63vw, 853.3359375px" class="uui-team10_image-2"></div>
                 <div class="div-block-126-copy">
                   <div class="uui-heading-tiny-9">
                     <a href="#" class="uui-blogsection12_title-link w-inline-block">
@@ -316,7 +373,7 @@
                 </div>
               </div>
               <div class="uui-team10_item-2">
-                <div class="uui-team10_image-wrapper-2"><img height="100" loading="lazy" width="Auto" src="../images/6708707b40c1c3b07a2161535560c31d.png" alt="" srcset="../images/6708707b40c1c3b07a2161535560c31d-p-500.png 500w, ../images/6708707b40c1c3b07a2161535560c31d-p-800.png 800w, ../images/6708707b40c1c3b07a2161535560c31d-p-1080.png 1080w, ../images/6708707b40c1c3b07a2161535560c31d.png 1600w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 991px) 59vw, (max-width: 1439px) 63vw, 853.34375px" class="uui-team10_image-2"></div>
+                <div class="uui-team10_image-wrapper-2"><img height="100" loading="lazy" width="Auto" src="../images/6708707b40c1c3b07a2161535560c31d.png" alt="" srcset="../images/6708707b40c1c3b07a2161535560c31d-p-500.png 500w, ../images/6708707b40c1c3b07a2161535560c31d-p-800.png 800w, ../images/6708707b40c1c3b07a2161535560c31d-p-1080.png 1080w, ../images/6708707b40c1c3b07a2161535560c31d.png 1600w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 991px) 59vw, (max-width: 1439px) 63vw, 853.3359375px" class="uui-team10_image-2"></div>
                 <div class="div-block-126-copy">
                   <div class="uui-heading-tiny-9">
                     <a href="#" class="uui-blogsection12_title-link w-inline-block">
@@ -330,7 +387,7 @@
                 </div>
               </div>
               <div class="uui-team10_item-2">
-                <div class="uui-team10_image-wrapper-2"><img height="100" loading="lazy" width="Auto" src="../images/web_1920___3_4x.png" alt="" srcset="../images/web_1920___3_4x-p-500.png 500w, ../images/web_1920___3_4x-p-800.png 800w, ../images/web_1920___3_4x-p-1080.png 1080w, ../images/web_1920___3_4x.png 1281w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 991px) 59vw, (max-width: 1439px) 63vw, 853.34375px" class="uui-team10_image-2"></div>
+                <div class="uui-team10_image-wrapper-2"><img height="100" loading="lazy" width="Auto" src="../images/web_1920___3_4x.png" alt="" srcset="../images/web_1920___3_4x-p-500.png 500w, ../images/web_1920___3_4x-p-800.png 800w, ../images/web_1920___3_4x-p-1080.png 1080w, ../images/web_1920___3_4x.png 1281w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 991px) 59vw, (max-width: 1439px) 63vw, 853.3359375px" class="uui-team10_image-2"></div>
                 <div class="div-block-126-copy">
                   <div class="uui-heading-tiny-9">
                     <a href="#" class="uui-blogsection12_title-link w-inline-block">
@@ -344,7 +401,7 @@
                 </div>
               </div>
               <div class="uui-team10_item-2">
-                <div class="uui-team10_image-wrapper-2"><img height="100" loading="lazy" width="Auto" src="../images/artboard___2_4x.png" alt="" srcset="../images/artboard___2_4x-p-500.png 500w, ../images/artboard___2_4x-p-800.png 800w, ../images/artboard___2_4x-p-1080.png 1080w, ../images/artboard___2_4x.png 1600w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 991px) 59vw, (max-width: 1439px) 63vw, 853.34375px" class="uui-team10_image-2"></div>
+                <div class="uui-team10_image-wrapper-2"><img height="100" loading="lazy" width="Auto" src="../images/artboard___2_4x.png" alt="" srcset="../images/artboard___2_4x-p-500.png 500w, ../images/artboard___2_4x-p-800.png 800w, ../images/artboard___2_4x-p-1080.png 1080w, ../images/artboard___2_4x.png 1600w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 96vw, (max-width: 991px) 59vw, (max-width: 1439px) 63vw, 853.3359375px" class="uui-team10_image-2"></div>
                 <div class="div-block-126-copy">
                   <div class="uui-heading-tiny-9">
                     <a href="#" class="uui-blogsection12_title-link w-inline-block">
