update_porfoilio_work_3

--- a/resume.html
+++ b/resume.html
@@ -18,7 +18,7 @@
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
 </head>
-<body class="body-6">
+<body class="body-6" style="overflow: visible;">
   <div data-collapse="medium" data-animation="default" data-duration="400" fs-scrolldisable-element="smart-nav" data-easing="ease" data-easing2="ease" role="banner" class="nav_bar w-nav">
     <div class="rl_navbar1_container">
       <div>
